[gd_scene load_steps=3 format=3 uid="uid://dpjryaof6e1p"]

[ext_resource type="PackedScene" uid="uid://dwmmrcdl0y5n5" path="res://scene/ui/base_model/panel_model.tscn" id="1_52y4x"]
[ext_resource type="Script" uid="uid://p4kh37481p3g" path="res://scene/ui/default_model/panel/quest_panel/add_quest_panel.gd" id="2_yimuo"]

[node name="AddQuestPanel" instance=ExtResource("1_52y4x")]
custom_minimum_size = Vector2(370, 0)
offset_left = -164.0
offset_top = -261.5
offset_right = 164.0
offset_bottom = 261.5
script = ExtResource("2_yimuo")

[node name="TitleLabel" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]
text = "添加任务"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="QuestNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "请输入任务名字"

[node name="QuestDescTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
placeholder_text = "请输入任务介绍"

[node name="CreateQuestButton" type="Button" parent="MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "创建"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/QuestNameLineEdit" to="." method="_on_quest_name_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateQuestButton" to="." method="_on_create_quest_button_pressed"]
